# CloudedDeals-scraper-1.0

./: BETA_AUDIT_REPORT.md  BETA_LAUNCH_READINESS.md  BETA_STATUS_REPORT.md  BING-INDEXING-CHECKLIST.md  CLAUDE.md  OPERATIONS.md  PLAN.md  README.md  SCRAPE-REVIEW-2026-02-12.md  SEO-STRATEGY-PLAN.md  SYSTEM_STATE.md  VEGAS-FLYER-CAMPAIGN.md
archive/: README.md
clouded-deals/scraper/: .env.example  .gitignore  brand_learner.py  clouded_logic.py  data_audit.py  deal_counts.py  deal_detector.py  debug.py  diagnose_disposables.py  enrichment_snapshots.py  main.py  metrics_collector.py  operations.md  parser.py  product_classifier.py  pyproject.toml  requirements.txt  submit_indexnow.py  test_connection.py
clouded-deals/scraper/config/: dispensaries.py
clouded-deals/scraper/handlers/: __init__.py  age_verification.py  iframe.py  pagination.py
clouded-deals/scraper/scripts/: probe_rise_api.py
clouded-deals/scraper/tests/: conftest.py  test_clouded_logic.py  test_deal_detector.py  test_enrichment.py  test_frontend_caps.py  test_imports.py  test_metrics_collector.py  test_michigan_diagnostic.py  test_ml_pipeline.py  test_nv_regression.py  test_pagination.py  test_parser.py  test_platform_recon.py  test_power_user_search.py  test_product_classifier.py  test_product_identification.py  test_site_diagnostics.py  test_stealth_stack.py
docs/: EXPANSION-ROADMAP-PHASES-2-4.md  INVESTOR-DILIGENCE-RESPONSES.md  MARKET-COVERAGE-SPRINT-GUIDE.md  ML-LLM-IMPLEMENTATION-PLAN.md  research-cross-market-synthesis.md  research-michigan-illinois.md
scripts/: expansion-dashboard.sql
(+281 files in other folders)
